--- a/src/styles.css
+++ b/src/styles.css
@@ -352,7 +352,7 @@ input:checked + .slider:before {
 }
 
 input:checked + .slider {
-    background-color: #4CAF50;
+    background-color: #001f0f;
 }
 
 input:checked + .slider:before {
@@ -378,7 +378,7 @@ input:checked + .slider:before {
 
 #progress {
     height: 100%;
-    background-color: #4caf50;
+    background-color: #001f0f;
     transition: width 0.3s ease-in-out;
 }
 
@@ -404,7 +404,7 @@ input:checked + .slider:before {
     opacity: 0;
     animation: fadeIn 0.5s forwards;
     background-color: #000000; /* Toast background color */
-    color: #40cc77; /* Toast text color */
+    color: #001f0f; /* Toast text color */
 }
 
 /* Toast Text */
@@ -615,3 +615,97 @@ input:checked:hover + .slider {
 input:not(:checked):hover + .slider {
     transform: scale(1.05); /* Slightly scale the slider when hovered */
 }
+
+
+
+
+
+
+
+
+/* Genel Konteyner */
+.container {
+    display: flex;
+    height: 100vh;
+    background-color: #1a1a1a;
+    color: #fff;
+    font-family: Arial, sans-serif;
+  }
+  
+  /* Sol Sidenav */
+  .sidenav-left {
+    width: 300px;
+    background-color: #2c2c2c;
+    padding: 20px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  /* Sağ Sidenav */
+  .sidenav-right {
+    width: 300px;
+    background-color: #2c2c2c;
+    padding: 20px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: auto;
+  }
+  
+  /* Ana İçerik */
+  .content {
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  
+  /* Başlıklar */
+  .header {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #fff;
+  }
+  
+  /* Kartlar */
+  .switch-card, .update-card {
+    background-color: #3a3a3a;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+  
+  .card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .toggle-button {
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  /* İçerik */
+  .card-content {
+    margin-top: 10px;
+  }
+  
+  .buttonPrimary {
+    padding: 10px 20px;
+    background-color: #5c5c5c;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
